--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -28268,6 +28268,180 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Legion.QuestConsumeTree.RewardFlavour
   nameWithType: QuestConsumeTree.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery
+  name: QuestControlMonastery
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.html
+  commentId: T:WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery
+  nameWithType: QuestControlMonastery
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.#ctor(MacroTools.LegendSystem.Capital)
+  name: QuestControlMonastery(Capital)
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.html#WarcraftLegacies_Source_Quests_Legion_QuestControlMonastery__ctor_MacroTools_LegendSystem_Capital_
+  commentId: M:WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.#ctor(MacroTools.LegendSystem.Capital)
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.QuestControlMonastery(MacroTools.LegendSystem.Capital)
+  nameWithType: QuestControlMonastery.QuestControlMonastery(Capital)
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.#ctor*
+  name: QuestControlMonastery
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.html#WarcraftLegacies_Source_Quests_Legion_QuestControlMonastery__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.QuestControlMonastery
+  nameWithType: QuestControlMonastery.QuestControlMonastery
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.html#WarcraftLegacies_Source_Quests_Legion_QuestControlMonastery_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestControlMonastery.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.html#WarcraftLegacies_Source_Quests_Legion_QuestControlMonastery_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.OnComplete
+  nameWithType: QuestControlMonastery.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.html#WarcraftLegacies_Source_Quests_Legion_QuestControlMonastery_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardDescription
+  nameWithType: QuestControlMonastery.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.html#WarcraftLegacies_Source_Quests_Legion_QuestControlMonastery_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardDescription
+  nameWithType: QuestControlMonastery.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.html#WarcraftLegacies_Source_Quests_Legion_QuestControlMonastery_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardFlavour
+  nameWithType: QuestControlMonastery.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.html#WarcraftLegacies_Source_Quests_Legion_QuestControlMonastery_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlMonastery.RewardFlavour
+  nameWithType: QuestControlMonastery.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang
+  name: QuestControlShadowfang
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.html
+  commentId: T:WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang
+  nameWithType: QuestControlShadowfang
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.#ctor(MacroTools.LegendSystem.Capital)
+  name: QuestControlShadowfang(Capital)
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.html#WarcraftLegacies_Source_Quests_Legion_QuestControlShadowfang__ctor_MacroTools_LegendSystem_Capital_
+  commentId: M:WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.#ctor(MacroTools.LegendSystem.Capital)
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.QuestControlShadowfang(MacroTools.LegendSystem.Capital)
+  nameWithType: QuestControlShadowfang.QuestControlShadowfang(Capital)
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.#ctor*
+  name: QuestControlShadowfang
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.html#WarcraftLegacies_Source_Quests_Legion_QuestControlShadowfang__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.QuestControlShadowfang
+  nameWithType: QuestControlShadowfang.QuestControlShadowfang
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.html#WarcraftLegacies_Source_Quests_Legion_QuestControlShadowfang_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestControlShadowfang.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.html#WarcraftLegacies_Source_Quests_Legion_QuestControlShadowfang_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.OnComplete
+  nameWithType: QuestControlShadowfang.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.html#WarcraftLegacies_Source_Quests_Legion_QuestControlShadowfang_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardDescription
+  nameWithType: QuestControlShadowfang.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.html#WarcraftLegacies_Source_Quests_Legion_QuestControlShadowfang_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardDescription
+  nameWithType: QuestControlShadowfang.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.html#WarcraftLegacies_Source_Quests_Legion_QuestControlShadowfang_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardFlavour
+  nameWithType: QuestControlShadowfang.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.html#WarcraftLegacies_Source_Quests_Legion_QuestControlShadowfang_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlShadowfang.RewardFlavour
+  nameWithType: QuestControlShadowfang.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire
+  name: QuestControlSpire
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html
+  commentId: T:WarcraftLegacies.Source.Quests.Legion.QuestControlSpire
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire
+  nameWithType: QuestControlSpire
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.#ctor(MacroTools.LegendSystem.Capital)
+  name: QuestControlSpire(Capital)
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html#WarcraftLegacies_Source_Quests_Legion_QuestControlSpire__ctor_MacroTools_LegendSystem_Capital_
+  commentId: M:WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.#ctor(MacroTools.LegendSystem.Capital)
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.QuestControlSpire(MacroTools.LegendSystem.Capital)
+  nameWithType: QuestControlSpire.QuestControlSpire(Capital)
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.#ctor*
+  name: QuestControlSpire
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html#WarcraftLegacies_Source_Quests_Legion_QuestControlSpire__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.QuestControlSpire
+  nameWithType: QuestControlSpire.QuestControlSpire
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html#WarcraftLegacies_Source_Quests_Legion_QuestControlSpire_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestControlSpire.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html#WarcraftLegacies_Source_Quests_Legion_QuestControlSpire_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.OnComplete
+  nameWithType: QuestControlSpire.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html#WarcraftLegacies_Source_Quests_Legion_QuestControlSpire_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardDescription
+  nameWithType: QuestControlSpire.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html#WarcraftLegacies_Source_Quests_Legion_QuestControlSpire_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardDescription
+  nameWithType: QuestControlSpire.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html#WarcraftLegacies_Source_Quests_Legion_QuestControlSpire_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardFlavour
+  nameWithType: QuestControlSpire.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.html#WarcraftLegacies_Source_Quests_Legion_QuestControlSpire_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardFlavour
+  nameWithType: QuestControlSpire.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.Legion.QuestLegionCaptureSunwell
   name: QuestLegionCaptureSunwell
   href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestLegionCaptureSunwell.html
